tests/paczka1/fuzzy1/59856024.err
Error in line 4: DDSSq A183 96,8
Error in line 1: qPg A183 98,6
Error in line 34: qPg A245 33,2
Error in line 37: qPg A492 59,1
Error in line 39: qPg A14 74,4
